# xiaozhi-android

./: .gitignore  CLAUDE.md  README.md
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/assets/mai_oi_parity/: expected_features.json
app/src/androidTest/java/info/dourok/voicebot/: MicroFeaturesEngineParityTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: control.html
app/src/main/assets/mai_oi/: mai_oi.tflite
app/src/main/cpp/: CMakeLists.txt  micro_features_jni.cpp
app/src/main/cpp/micro_features/: VENDOR_INFO.txt
app/src/main/java/ai/kitt/snowboy/: SnowboyDetect.java  snowboyJNI.java
app/src/main/java/com/aiboxplus/sample_wake_word/: MicroWakeWordEngine.java
app/src/main/java/info/dourok/voicebot/: AppModule.kt  AudioRecorder.kt  BootReceiver.kt  MainActivity.kt  OpusDecoder.kt  OpusEncoder.kt  OpusStreamPlayer.kt  Ota.kt  VApplication.kt
app/src/main/java/info/dourok/voicebot/control/: ControlServer.kt
app/src/main/java/info/dourok/voicebot/data/: AppConfig.kt  Settings.kt  SettingsRepository.kt
app/src/main/java/info/dourok/voicebot/data/model/: DeviceInfo.kt  OtaResult.kt
app/src/main/java/info/dourok/voicebot/data/voice/: AudioTrackSoundEffects.kt  MaiOiWakeWordDetector.kt  MicroFeaturesEngine.kt  MicroWakeWordDetector.kt  MsgCenterLedIndicator.kt  OpusAudioPlayback.kt  RecorderAudioCapture.kt  SnowboyWakeWordDetector.kt  VoiceModule.kt
app/src/main/java/info/dourok/voicebot/domain/voice/: AudioCapture.kt  AudioPlayback.kt  ConversationLog.kt  LedIndicator.kt  MediaCommands.kt  MediaCoordinator.kt  MediaSessionState.kt  MicTest.kt  SoundEffects.kt  SttAgc.kt  TextCommands.kt  VoiceAssistant.kt  WakeWordDetector.kt
app/src/main/java/info/dourok/voicebot/domain/voice/model/: ChatMessage.kt  VoiceState.kt
app/src/main/java/info/dourok/voicebot/media/: MediaPlayerController.kt  MediaPlayerState.kt  MediaSearchResult.kt  PytubeVideoResult.kt
app/src/main/java/info/dourok/voicebot/protocol/: MqttProtocol.kt  Protocol.kt  WebsocketProtocol.kt
app/src/main/java/info/dourok/voicebot/ui/: ChatScreen.kt  ChatViewModel.kt  ServerFormScreen.kt
app/src/main/java/info/dourok/voicebot/ui/theme/: Theme.kt
app/src/test/java/info/dourok/voicebot/data/: MaskApiKeyTest.kt
app/src/test/java/info/dourok/voicebot/data/model/: OtaResultWebsocketTest.kt
app/src/test/java/info/dourok/voicebot/media/: MediaSearchResultTest.kt  PytubeVideoResultTest.kt
docs/superpowers/plans/: 2026-07-12-mai-oi-android-wake-engine.md  2026-07-19-r1-media-player.md  2026-07-19-r1-media-unification.md
docs/superpowers/specs/: 2026-07-12-mai-oi-android-wake-engine-design.md  2026-07-19-r1-media-player-design.md  2026-07-19-r1-media-unification-design.md
tools/: crashlog.sh  mictest.sh  r1sh.py  restore.sh
